# verbiage

./: .env.example  .gitignore  README.md  api_interface.py  command_handlers.py  pyproject.toml  requirements.txt  start.py  toml:pyproject.toml
agents/: creative.json  researcher.json  teacher.json
python:src/: __init__.py
src/: agents.py  api_client.py  api_interface.py  api_utils.py  config.py  ui.py  verbiage.py
verbiage/: agents.py  api_client.py  api_utils.py  command_handlers.py  config.py  conversation.py  ui.py  verbiage.py
verbiage/agents/: assistant.json  developer.json
