[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "verbiage"
version = "0.1.0"
dependencies = [
    "openai",
    "rich",
    "platformdirs>=3.0",
    "python-dotenv"
]
description = "Verbiage - Chat GPT avec outils en terminal"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
verbiage = "verbiage.verbiage:main"
